<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/white">



    <Button
        android:id="@+id/buttonLessons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_lessons"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/buttonCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_calculator"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_profile"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:layout_marginBottom="12dp" />


</LinearLayout>
